--- a/index.html
+++ b/index.html
@@ -76,6 +76,15 @@
                     </div>
                 </a>
             </div>
+            <div class="col-md-4">
+                <a href="./projeto4.html" class="card" style="text-decoration: none;">
+                    <img src="./src/img/projeto4.png" class="card-img-top" alt="Site com SVG">
+                    <div class="card-body">
+                        <h5 class="card-title">Site com SVG</h5>
+                        <p class="card-text">Alguns SVG.</p>
+                    </div>
+                </a>
+            </div>
         </div>
     </div>
 
