--- a/projeto3.html
+++ b/projeto3.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrossel de Imagens</title>
     <link rel="stylesheet" href="./css/projeto3.css">
-    <link rel="icon" href="./src/img/projeto3icon.png"
+    <link rel="icon" href="./src/img/projeto3icon.png">
 </head>
 
 <body>
