--- a/projetos/index.html
+++ b/projetos/index.html
@@ -141,7 +141,9 @@
         </div>
       </div>
       <h3>Segue aqui algumas jogadas minhas nesses jogos</h3> <!-- Subtítulo -->
-      <a href="./playspage.html">Clique aqui para ver as minhas jogadas!</a> <!-- Link para a página de jogadas -->
+      <div class="playsbutton">
+        <a href="./playspage.html">Clique aqui para ver as minhas jogadas!</a> <!-- Link para a página de jogadas -->
+      </div>
     </section>
 
     <h5>Outras Informações Minhas</h5> <!-- Subtítulo -->
